--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/Users/npula/Desktop/Projects/cartwish/src/assets/CartWish.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta http-equiv="Content-Security-Policy"
+      content="default-src 'self' *.aptrinsic.com;
+               connect-src 'self' http://localhost:5000 *.aptrinsic.com;
+               script-src 'self' *.aptrinsic.com;
+               style-src 'self' 'unsafe-inline' https://fonts.googleapis.com *.aptrinsic.com;
+               img-src 'self' http://localhost:5000 *.aptrinsic.com https://storage.googleapis.com data:;
+               font-src 'self' https://fonts.gstatic.com *.aptrinsic.com;"> -->
     <title>eCommerce
     </title>
   </head>
