--- a/index.html
+++ b/index.html
@@ -2,6 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Gainsight PX Tag--> 
+  
+    <script>
+  (function(n,t,a,e,co){
+    var i="aptrinsic";
+    n[i]=n[i]||function(){
+      (n[i].q=n[i].q||[]).push(arguments)},
+      n[i].p=e;n[i].c=co;
+    var r=t.createElement("script");
+    r.async=!0,r.src=a+"?a="+e;
+    var c=t.getElementsByTagName("script")[0];
+    c.parentNode.insertBefore(r,c)
+  })
+  (window,document,"https://web-sdk.aptrinsic.com/api/aptrinsic.js","AP-WLHVOASMAZVB-2-4",{"fullDomainCookie": true, "autoTrackHash": true,
+  "useSessionStorageForRedirect": true},{iframeModeEnabled: true},{"engagementCallDelay": 250}); 
+  </script>
+<!-- Gainsight PX Tag--*/
     <link rel="icon" href="/Users/npula/Desktop/Projects/cartwish/src/assets/CartWish.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <meta http-equiv="Content-Security-Policy"
